import { describe, it, expect } from 'vitest';
import * as parser from '@babel/parser';
import { analyzeWebpackConfig } from '../src/converter';
import { getConfidence } from '../src/confidence';
import { FIXTURES } from './fixtures';

const parsesAsTs = (code: string): boolean => {
  try {
    parser.parse(code, { sourceType: 'module', plugins: ['typescript'] });
    return true;
  } catch {
    return false;
  }
};

describe('fixture suite (v0.1 release gate)', () => {
  for (const fx of FIXTURES) {
    describe(fx.name, () => {
      const result = analyzeWebpackConfig(fx.input, fx.options);
      const codes = new Set(result.warnings.map((w) => w.code));

      it('emits the expected warning codes', () => {
        for (const code of fx.expectCodes) {
          expect(codes, `missing code '${code}'`).toContain(code);
        }
      });

      if (fx.forbidCodes) {
        it('does not emit forbidden codes', () => {
          for (const code of fx.forbidCodes!) {
            expect(codes, `unexpected code '${code}'`).not.toContain(code);
          }
        });
      }

      if (fx.expectFlags) {
        it('sets the expected flags', () => {
          for (const [key, value] of Object.entries(fx.expectFlags!)) {
            expect(result.flags[key as keyof typeof result.flags], `flag '${key}'`).toBe(value);
          }
        });
      }

      if (fx.expectOutputIncludes) {
        it('renders the expected output fragments', () => {
          for (const frag of fx.expectOutputIncludes!) {
            expect(result.output, `output should include: ${frag}`).toContain(frag);
          }
        });
      }

      if (fx.expectOutputExcludes) {
        it('omits the excluded output fragments', () => {
          for (const frag of fx.expectOutputExcludes!) {
            expect(result.output, `output should NOT include: ${frag}`).not.toContain(frag);
          }
        });
      }

      if (fx.expectConfidence) {
        it('computes the expected confidence band', () => {
          expect(getConfidence(result.warnings)).toBe(fx.expectConfidence);
        });
      }

      it('snapshots exact warning tiers + codes', () => {
        const tiers = result.warnings.map((w) => `${w.type}:${w.code}`).sort();
        expect(tiers).toMatchSnapshot();
      });

      it('always targets Vite 8 by default and emits a valid header', () => {
        expect(result.flags.targetViteMajor).toBe(fx.options?.targetViteMajor ?? 8);
        expect(result.output).toContain('// Generated by @shiftkit/webpack-to-vite');
        expect(result.output).toContain('without executing your webpack config');
      });

      it('renders output that parses as valid TypeScript', () => {
        expect(parsesAsTs(result.output)).toBe(true);
      });

      it('never emits eval / new Function', () => {
        expect(result.output).not.toMatch(/\beval\s*\(/);
        expect(result.output).not.toMatch(/new\s+Function/);
      });
    });
  }
});

describe('determinism', () => {
  it('produces byte-identical output across runs', () => {
    for (const fx of FIXTURES) {
      const a = analyzeWebpackConfig(fx.input, fx.options);
      const b = analyzeWebpackConfig(fx.input, fx.options);
      expect(a.output).toBe(b.output);
      expect(a.warnings).toEqual(b.warnings);
    }
  });
});
